# open-data-meta-guard

./: .gitignore  CLAUDE.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_v2_init_datasets.py  0002_v2_init_meta_evaluations.py  0003_meta_eval_jobs.py  0004_meta_evaluation_uuid_id.py  0005_datasets_has_uploaded.py  0006_data_downloads_init.py  0007_dq_eval_init.py  0008_add_chat_tables.py
backend/app/: main.py
backend/app/agents/data_quality_assess/: __init__.py  builder.py  prompt.py
backend/app/agents/data_quality_semantic/: __init__.py  builder.py  prompt.py  schema.py
backend/app/agents/data_story/: __init__.py  builder.py  prompt.py
backend/app/agents/kg_extract/: __init__.py  builder.py  prompt.py  schema.py
backend/app/agents/meta_evaluate/: builder.py  prompt.py  schema.py
backend/app/agents/tools/: __init__.py  _charting_common.py  browser_tool.py  (+7 more)
backend/app/api/: app.py  resp.py
backend/app/core/: browser.py  config.py  db.py  file_storage.py  lifespan.py  llm.py  log.py  neo4j_init.py
backend/app/dao/: _paginate.py  chat.py  data_download.py  data_quality_evaluation.py  dataset.py  kg.py  meta_evaluation.py  meta_evaluation_job.py
backend/app/model/: chat.py  data_download.py  data_quality_evaluation.py  dataset.py  meta_evaluation.py  meta_evaluation_job.py
backend/app/schemas/: chat.py  data_collect.py  data_quality.py  kg.py  meta_collect.py  meta_evaluate.py
backend/app/service/: data_collect.py  data_quality.py  kg.py  meta_collect.py  meta_evaluate.py
backend/app/workers/: __init__.py  meta_evaluate_worker.py
(+85 files in other folders)
