name = "open-data-meta-guard-v2"

# ─────────────────────────────────────────────────────────────────────
# v2.0 后端依赖
#   - 移除 neo4j / neo4j 异步驱动 / mcp（v2.0 不再上知识图谱）
#   - 保留 FastAPI / langchain / langgraph / playwright / pydantic / sqlalchemy / asyncpg
# ─────────────────────────────────────────────────────────────────────

# ─────────────────────────────────────────────────────────────────────
# 启动命令（uv run）：
#   docker compose up -d postgres
#   uv sync
#   uv run python -m app.main
# ─────────────────────────────────────────────────────────────────────

[project]
name = "open-data-meta-guard-v2"
version = "2.0.0"
description = "v2.0 simplified open-data metadata guard (ingestion → evaluation → upload → quality)"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.30.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.9",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "loguru>=0.7.3",
    "playwright>=1.60.0",
    "pydantic>=2.8,<3.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.18.4",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "neo4j>=5.28.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
app = "app.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "memory*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
